<resources>
    <string name="app_name">轻账单</string>
    <string name="edit_one">记一笔...</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="month_left">预算剩余</string>
    <string name="show_diagram">查看图表分析</string>
    <string name="note">备注</string>
    <string name="add_note">添加备注</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="pls_input_time">请输入时间(24小时制)</string>
    <string name="set_budget">设置预算</string>
    <string name="budget">预算</string>
    <string name="search">请输入要搜索的备注信息</string>
    <string name="data_empty">数据为空，无此类记录</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history">账单记录</string>
    <string name="info">账单详情</string>
    <string name="import_vx">导入微信</string>

    <string name="about_info">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_version_value">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_app_value">一款Android记账APP，涉及知识点包括Activity、Fragment、SQLite数据库操作等。</string>
    <string name="about_about_me">关于我</string>
    <string name="about_developer">开发者</string>
    <string name="about_develope_value">孙钰轩</string>
    <string name="about_email">作者邮箱</string>
    <string name="about_email_value">erostrate9@foxmail.com</string>
    <string name="about_github">Github仓库地址</string>
    <string name="about_github_value">https://github.com/Erostrate9/LiteBill</string>
    <string name="history_info">本月账单记录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>