<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/rice_fffaf4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_about"
            style="@style/dialogMoreStyle"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"
            />
        <Button
            android:id="@+id/dialog_more_btn_setting"
            style="@style/dialogMoreStyle"
            android:drawableTop="@mipmap/it_shezhi"
            android:text="@string/setting"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <Button
            android:id="@+id/dialog_more_btn_history"
            style="@style/dialogMoreStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_info"
            style="@style/dialogMoreStyle"
            android:drawableTop="@mipmap/it_xiqing"
            android:text="@string/info"
            />
        <Button
            android:id="@+id/dialog_more_btn_vx"
            style="@style/dialogMoreStyle"
            android:drawableTop="@mipmap/it_vx"
            android:text="@string/import_vx"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        <Button
            style="@style/dialogMoreStyle"
            android:visibility="invisible" />
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>