<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/rice_fffaf4">

    <TextView
        android:id="@+id/dialog_budget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_budget"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_budget_yuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_budget_tv"
        android:layout_alignTop="@+id/dialog_budget_et"
        android:text="￥"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_budget_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_budget_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/dialog_budget_yuan"
        android:background="@color/white"
        android:hint="@string/budget"
        android:inputType="number"
        android:textSize="18sp">

        <requestFocus />
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_budget_et"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_budget_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:background="@drawable/dialog_btn_bg"/>
        <Button
            android:id="@+id/dialog_budget_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_edit_btn_bg"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>