<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rice_fffaf4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/history_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/it_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/history"/>

        <ImageView
            android:id="@+id/history_iv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/it_rili" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/history_rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/history_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020年11月" />
        <TextView
            android:id="@+id/history_tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/history_info"
            android:textColor="@color/green_7b8b6f"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/history_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/history_rl2"
        android:background="@color/rice_fffaf4"
        android:divider="@null"
        android:dividerHeight="6dp"
        android:padding="10dp"
        android:scrollbars="none" />
    <TextView
        android:id="@+id/history_tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_empty"
        android:gravity="center"
        android:textSize="22sp"
        android:drawableTop="@mipmap/it_searchtext"
        android:layout_marginTop="200dp"/>

</LinearLayout>